product csv representation